--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -26,8 +26,8 @@
                     <label for="videographer">Videographer</label><br>
                     <input type="radio" id="photographer" name="desvidpho" value="photographer">
                     <label for="photographer">Photographer</label><br><br>
-                    <label for="Link to Resume & Portfolio">Link to Resume & Portfolio</label><br>
-                    <textarea id="Link to Resume & Portfolio" name="Link to Resume and Portfolio" rows="3" cols="60"></textarea><br><br>
+                    <label for="resumeportfolio">Link to Resume & Portfolio</label><br>
+                    <textarea id="resumeportfolio" name="resumeportfolio" rows="3" cols="60"></textarea><br><br>
                     <input type="submit" value="Send Form">
                 </form>
 
