--- a/lab04/contact.html
+++ b/lab04/contact.html
@@ -20,11 +20,11 @@
                     <label for="email">Email</label><br>
                     <input type="text" id="email" name="email"><br>
                 <p>Choose Position:</p>
-                    <input type="radio" id="designer" name="desvidpho" value="designer"> 
+                    <input type="radio" id="designer" name="position" value="designer"> 
                     <label for="designer">Designer</label><br>
-                    <input type="radio" id="videographer" name="desvidpho" value="videographer">
+                    <input type="radio" id="videographer" name="position" value="videographer">
                     <label for="videographer">Videographer</label><br>
-                    <input type="radio" id="photographer" name="desvidpho" value="photographer">
+                    <input type="radio" id="photographer" name="position" value="photographer">
                     <label for="photographer">Photographer</label><br><br>
                     <label for="resumeportfolio">Link to Resume & Portfolio</label><br>
                     <textarea id="resumeportfolio" name="resumeportfolio" rows="3" cols="60"></textarea><br><br>
