--- a/lab05/contact.html
+++ b/lab05/contact.html
@@ -11,7 +11,7 @@
                 <br>
                 <a href="mailto:mfruelas@syr.edu">Maria Ruelas Email</a> <br>
                 <br>
-                <a href="https://www.linkedin.com/in/maria-ruelas/" target="_blank">My LinkedIn Page <br> <img src="../images/LI-Logo.svg.original.svg" alt="Blue LinkedIn Logo"></a> <br>
+                <a href="https://www.linkedin.com/in/maria-ruelas/" target="_blank">My LinkedIn Page <br> <img src="../images/logo-sized.png" alt="Blue LinkedIn Logo"></a> <br>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2916.3195173154477!2d-76.14133036096312!3d43.03470837125837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d9f39b93dcc00f%3A0x7c00efd09213ac94!2sLawrinson%20Hall%2C%20303%20Stadium%20Pl%2C%20Syracuse%2C%20NY%2013210!5e0!3m2!1sen!2sus!4v1706805936439!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><br>
                 <h2>Join the Team</h2>
                 <form action="https://formspree.io/f/xrgnpdjd" method="post">
