--- a/lab07/index.html
+++ b/lab07/index.html
@@ -11,7 +11,7 @@
             <a href="skills.html">Skills</a> &vert;
             <a href="contact.html">Contact</a> 
         </nav>
-    <img src="../images/camera-me.jpg" alt="Maria Ruelas holding a camera"></a>
+    <img src="../images/camera-me.jpg" alt="Maria Ruelas holding a camera">
     <h1>Maria Fernanda Ruelas Arceo Biography</h1> 
     <p>
         Maria is a dual major in <strong>graphic design</strong> and <strong>information management.</strong> Maria is interested in UX/UI for video games and apps.
