--- a/lab09/skills.html
+++ b/lab09/skills.html
@@ -44,27 +44,28 @@
             <div class="flex2">
                 <div class="section1"> 
                     <div>
-                        <img src="adobe-suite-logo.png" class="icon">
+                        <img src="adobe-suite-logo.png" alt="adobe suite logo" class="icon">
                         <br>
                         <p>Adobe Suite</p>
                     </div>
                     <div>
-                        <img src="spanish-logo.png" class="icon">
+                        <img src="spanish-logo.png" alt="spanish language logo"
+                        class="icon">
                         <br>
                         <p>Spanish</p>
                     </div>
                     <div>
-                        <img src="html-logo.png" class="icon">
+                        <img src="html-logo.png" alt="html logo" class="icon">
                         <br>
                         <p>HTML</p>
                     </div>
                     <div>
-                        <img src="css-logo.svg" class="icon">
+                        <img src="css-logo.svg" alt="CSS logo" class="icon">
                         <br>
                         <p>CSS</p>
                     </div>
                     <div>
-                        <img src="microsoft-project-logo.png" class="icon">
+                        <img src="microsoft-project-logo.png" alt="microsoft project logo" class="icon">
                         <br>
                         <p>Microsoft Project</p>
                     </div>
