--- a/project5/home.html
+++ b/project5/home.html
@@ -11,7 +11,7 @@
         border-radius:20px;
     } 
     .profile {
-        flex:2;
+        flex:1;
     }
     .info {
         flex:2;
@@ -21,6 +21,10 @@
         flex-wrap:wrap;
         justify-content:space-around;
     }
+    
+@media only screen and (max-width:800px){
+    
+}
     </style>
 </head>
 <body>
