--- a/project5/contact.html
+++ b/project5/contact.html
@@ -4,46 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        form {
+            background-color: #FFFFFF;
+            width: 40%;
+            padding: 40px;
+            color:#253551;
+            border-radius: 20px;
+            line-height:25px;
+        }
+        input, textarea {
+            margin-bottom:15px;
+            width:100%; 
+        }
+        .submit {
+            background-color:#5f76b0;
+            border: none;
+            padding: 15px;
+            color:#FFFFFF;
+        }
+        @media only screen and (max-width: 800px) {
+            form {
+                width:80%;
+                margin:0 auto;
+            }
+        }
+    </style>
 </head>
 <body>
-    <nav>
-        <a href="home.html">Maria Ruelas</a>
-        <a href="graphics.html">Graphic Design</a> 
-        <a href="photos.html">Photography</a> 
-        <a href="contact.html">Contact</a> 
+    <nav class="nav">
+        <div class="navleft">
+            <a href="home.html">Maria Ruelas</a>
+        </div>
+        <div class="navright">
+            <a href="graphics.html">Graphic Design</a>
+            <a href="photos.html">Photography</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </nav>
-    
-    <form action="" method="post">
-        <h1>Contact Me</h1>
-        <label for="firstname">First Name</label><br>
-        <input type="text" id="firstname" name="firstname"><br>
-        <label for="lastname">Last Name</label><br>
-        <input type="text" id="lastname" name="lastname"><br>
-        <label for="phone">Phone Number</label><br>
-        <input type="text" id="phone" name="phone"><br>
-        <label for="email">Email</label><br>
-        <input type="text" id="email" name="email"><br>
-        <label for="message">Message</label><br>
-        <textarea id="message" name="message"></textarea><br>
-        <input type="submit" value="Send Form"><br>
-    </form>
+    <div class="container">
+    <h1>Contact Me</h1>
+        <form action="" method="post" class="formy">
+            <label for="firstname">First Name</label><br>
+            <input type="text" id="firstname" name="firstname"><br>
+            <label for="lastname">Last Name</label><br>
+            <input type="text" id="lastname" name="lastname"><br>
+            <label for="phone">Phone Number</label><br>
+            <input type="text" id="phone" name="phone"><br>
+            <label for="email">Email</label><br>
+            <input type="text" id="email" name="email"><br>
+            <label for="message">Message</label><br>
+            <textarea id="message" name="message" rows="8" cols="10"></textarea><br>
+            <input type="submit" class="submit" value="Send Form"><br>
+        </form>
+    </div>
     <footer>
         <h2>Ruelas</h2>
-        <a href="home.html">Maria Ruelas</a><br>
-            <a href="graphics.html">Graphic Design</a><br>
-            <a href="photos.html">Photography</a><br>
-            <a href="contact.html">Contact</a><br>
-            <a href="https://www.instagram.com/m_moments2004/"><img src="insta_logo.png" alt="instagram logo"></a>
-            <a href="tel:6039319825"><img src="phone_logo.png" alt="phone logo"></a>
-            <a href="mailto:maruelas0423@gmail.com"><img src="email_logo.png" alt="email logo"></a>
-            <a href="https://www.linkedin.com/in/maria-ruelas/"><img src="linkedin_logo.png" alt="LinkedIn logo"></a>
-            <br>
+        <div class="footer">
+            <div class="sitelinks">
+                <a href="home.html">Maria Ruelas</a><br>
+                <a href="graphics.html">Graphic Design</a><br>
+                <a href="photos.html">Photography</a><br>
+                <a href="contact.html">Contact</a><br>
+            </div>
+            <div class="socials">
+                <a href="https://www.instagram.com/m_moments2004/"><img src="insta_logo.png" class="instagram" alt="instagram logo"></a>
+                <a href="tel:6039319825"><img src="phone_logo.png" class="phone" alt="phone logo"></a>
+                <a href="mailto:maruelas0423@gmail.com"><img src="email_logo.png" class="email" alt="email logo"></a>
+                <a href="https://www.linkedin.com/in/maria-ruelas/"><img src="linkedin_logo.png" class="linkedin" alt="LinkedIn logo"></a>
+            </div>
+        </div> 
+        <br>
         <p class="copyright">
-            All content is copyright to the artist. No commercial use without express written permission.
+            * All content is copyright to the artist. No commercial use without express written permission.
         </p>
         <p class="copyright">
             &copy;2024 MARIA RUELAS.
         </p>
-    </footer>
+        </footer>
 </body>
 </html>
