--- a/project5/graphics.html
+++ b/project5/graphics.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graphic Design</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
-        <a href="home.html">Maria Ruelas</a>
-        <a href="graphics.html">Graphic Design</a> 
-        <a href="photos.html">Photography</a> 
-        <a href="contact.html">Contact</a> 
+    <nav class="nav">
+        <div class="navleft">
+            <a href="home.html">Maria Ruelas</a>
+        </div>
+        <div class="navright">
+            <a href="graphics.html">Graphic Design</a>
+            <a href="photos.html">Photography</a>
+            <a href="contact.html">Contact</a>
+        </div>
     </nav>
+    <div class="container">
     <h1>Graphic Design</h1>
     <p>
         I have always been a creator, but it all started with a passion for drawing. Over the years I
@@ -73,23 +79,30 @@
     <img src="img_graphics/certificate2.jpg" alt="Illustrator Certificate">
     <img src="img_graphics/certificate1.jpg" alt="In Design certificate">
     <img src="img_graphics/certificate3.jpg" alt="visual design certificate">
-    
+    </div>
     <footer>
         <h2>Ruelas</h2>
-        <a href="home.html">Maria Ruelas</a><br>
-            <a href="graphics.html">Graphic Design</a><br>
-            <a href="photos.html">Photography</a><br>
-            <a href="contact.html">Contact</a><br>
-            <a href="https://www.instagram.com/m_moments2004/"><img src="insta_logo.png" alt="instagram logo"></a>
-            <a href="tel:6039319825"><img src="phone_logo.png" alt="phone logo"></a>
-            <a href="mailto:maruelas0423@gmail.com"><img src="email_logo.png" alt="email logo"></a>
-            <a href="https://www.linkedin.com/in/maria-ruelas/"><img src="linkedin_logo.png" alt="LinkedIn logo"></a>
+        <div class="footer">
+            <div class="sitelinks">
+                <a href="home.html">Maria Ruelas</a><br>
+                <a href="graphics.html">Graphic Design</a><br>
+                <a href="photos.html">Photography</a><br>
+                <a href="contact.html">Contact</a><br>
+            </div>
+            <div class="socials">
+                <a href="https://www.instagram.com/m_moments2004/"><img src="insta_logo.png" class="instagram" alt="instagram logo"></a>
+                <a href="tel:6039319825"><img src="phone_logo.png" class="phone" alt="phone logo"></a>
+                <a href="mailto:maruelas0423@gmail.com"><img src="email_logo.png" class="email" alt="email logo"></a>
+                <a href="https://www.linkedin.com/in/maria-ruelas/"><img src="linkedin_logo.png" class="linkedin" alt="LinkedIn logo"></a>
+            </div>
+        </div> 
+        <br>
         <p class="copyright">
-            All content is copyright to the artist. No commercial use without express written permission.
+            * All content is copyright to the artist. No commercial use without express written permission.
         </p>
         <p class="copyright">
             &copy;2024 MARIA RUELAS.
         </p>
-    </footer>
+        </footer>
 </body>
 </html>
