--- a/lab13/contact.html
+++ b/lab13/contact.html
@@ -21,13 +21,13 @@
         }
 
         .section1 {
-            background-color: #9F70FD;
+            background-color: #7748d4;
             border-radius: 1em;
             margin: 20px;
         }
 
         .section2 {
-            background-color: #9F70FD;
+            background-color: #7748d4;
             border-radius: 1em;
             margin: 20px;
         }
