--- a/lab13/skills.html
+++ b/lab13/skills.html
@@ -37,7 +37,7 @@
         }
 
         aside {
-            background-color: #9F70FD;
+            background-color: #7a48de;
             border-radius: 20px;
             padding: 10px;
             flex: 1;
