--- a/project6/graphics.html
+++ b/project6/graphics.html
@@ -7,6 +7,10 @@
     <title>Graphic Design</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="carousel.css">
+    <link rel="shortcut icon" type="image/x-icon" href="img_graphics/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <style>
         .photoshop1,
         .photoshop2, .illustrator1, .illustrator2 {
@@ -46,6 +50,9 @@
         .evolve {
             max-width:500px;
             max-height: 500px;
+        }
+        img {
+            border-radius: 10px;
         }
     </style>
 </head>
