--- a/project6/home.html
+++ b/project6/home.html
@@ -6,9 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" type="image/x-icon" href="img_graphics/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+
     <style>
         .mepic {
             float: left;
+            border-radius: 20px;
         }
 
         .profile {
@@ -48,9 +54,8 @@
                 <div class="info">
                     <h1>About<br>Maria<br>Ruelas</h1>
                     <p id="skip">
-                        Maria Fernanda Ruelas Arceo was born in Mexico City, Mexico, and moved to New Hampshire at the
-                        age
-                        of 11. She graduated from Concord High School in 2023 and began her professional journey by
+                        Maria Fernanda Ruelas Arceo was born in Mexico City, Mexico, on February 2nd, 2004. She moved to New Hampshire at the
+                        age of 11 with her family. She graduated from Concord High School in 2023 and began her professional journey by
                         enrolling at Syracuse University. Currently, she is pursuing a dual degree in Visual
                         Communications
                         and Information Management & Technology.
