--- a/project6/photos.html
+++ b/project6/photos.html
@@ -7,7 +7,10 @@
     <title>Photography</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="carousel.css">
-
+    <link rel="shortcut icon" type="image/x-icon" href="img_graphics/favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
     <style>
         .grid {
             display: grid;
@@ -54,6 +57,7 @@
         .grid4 img,
         .grid6 img {
             width: 100%;
+            border-radius: 10px;
         }
     </style>
 </head>
